Remove code smells and update Readme